# Inspection

./: CMakeLists.txt  Inspection.c  Inspection.cmake  InspectionConfig.cmake  README.md  makefile  test.txt
include/: Constructor.h  Core.h  GetInformations.h  Inspection.h  Intercept.h  SignalHandler.h  UserInput.h
lib/cmake/: InspectionConfig-noconfig.cmake  InspectionConfig.cmake
src/: Constructor.c  Core.c  GetInformations.c  HelloWorld.c  Inspection.c  Intercept.c  SignalHandler.c  UserInput.c
test/: CMakeLists.txt  HelloWorld.c  fopen.c  loop.c  sigint.c  signals.c  test2.c
